# vigilai

./: LICENSE  README.md  pyproject.toml  requirements.txt
backend/accounts/: admin.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_profile_phone_alter_profile_user.py  0002_profile_phone_alter_customuser_email_and_more.py  0002_remove_profile_id_alter_customuser_phone_number_and_more.py  0003_alter_customuser_id.py  0003_alter_customuser_staff_id.py  0004_alter_customuser_staff_id.py  0004_alter_profile_profile_photo.py  0005_alter_profile_profile_photo.py  0005_remove_profile_phone_alter_customuser_phone_number.py  0006_alter_profile_profile_photo.py  0007_customuser_bio_customuser_profile_photo_and_more.py
backend/backend/: settings.py  urls.py
backend/cases/: admin.py  apps.py  ml_utils.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/cases/migrations/: 0001_initial.py  0002_case_owner.py  0002_witness_contact_info.py  0003_backfill_owner.py  0003_criminal_rename_criminal_id_criminalrecord_record_id_and_more.py  0004_merge_0002_case_owner_0003_backfill_owner.py  0005_alter_case_owner.py  (+18 more)
backend/chat/: apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
backend/dashboard/: urls.py  views.py
backend/data/: suspect_lightgbm_model.txt
backend/ml/: first.py  model.py  traingenertater.py
vigilai_frontend/: package-lock.json  package.json
vigilai_frontend/public/: index.html
vigilai_frontend/src/: App.js  Auth.css
(+44 files in other folders)
