[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vigilai-backend"
version = "0.1.0"
description = "VigilAI backend services and APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Django>=5.2,<6.0",
  "djangorestframework>=3.15,<4.0",
  "djangorestframework-simplejwt>=5.3,<6.0",
  "drf-spectacular>=0.27,<1.0",
  "drf-spectacular-sidecar>=2024.1,<2027.0",
  "django-cors-headers>=4.4,<5.0",
  "psycopg2-binary>=2.9,<3.0",
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<3.0",
  "joblib>=1.4,<2.0",
  "lightgbm>=4.5,<5.0",
  "python-dateutil>=2.9,<3.0",
]

[tool.setuptools]
packages = []
